@@ -30,6 +30,7 @@ This release includes the following bugfixes:
  o fallback to gettimeofday when monotonic clock is unavailable at run-time
  o range numbers could be made to wrongly get output as signed
  o unexpected 1xx responses hung transfers
+ o FTP transfers segfault when using different CURLOPT_FTP_FILEMETHOD
 
 This release includes the following known bugs:
 
@@ -49,7 +50,7 @@ advice from friends like these:
  Lenny Rachitsky, Axel Tillequin, Arnaud Ebalard, Yang Tse, Dan Fandrich,
  Rob Crittenden, Dengminwen, Christopher Palow, Hans-Jurgen May,
  Phil Pellouchoud, Eduard Bloch, John Lightsey, Stephen Collyer, Tor Arntsen,
- Rolland Dudemaine, Phil Blundell
+ Rolland Dudemaine, Phil Blundell, Scott Barrett
 
 
         Thanks! (and sorry if I forgot to mention someone)
